# p_astro_project

./: .coverage  .gitignore  FAR.ipynb  README.md  all_candidates.csv  bilby_snr.ipynb  download_data.sh  draw_from_posterior.ipynb  event_rate.ipynb  event_rates.py  fit_FAR_SNR.ipynb  generate_SNRs_FARs.py  gibbs_sample.py  obtain_candidates.ipynb  p_astro.ipynb  p_astro_utils.py  params_for_SNR.csv  params_inc_FAR.csv  params_inc_SNR.csv  pycbc_snr.ipynb  requirements.txt  select_hyperposterior.py  setup.cfg  setup.py
.github/workflows/: main.yaml  unittests.yml
.ipynb_checkpoints/: PowerLawPeakObsOneTwoThree-checkpoint.json  draw_from_posterior-checkpoint.ipynb
P_astro_project/: README.md  __init__.py  create_database.py  event_rate.ipynb  gibbs_sample.py  mpl_utils.py  p_astro_utils.py  run_analysis.sh  select_hyperposterior.py
analysis/: README.md  generate_SNRs_FARs.py  gibbs_sample.py  mpl_utils.py  p_astro_utils.py  select_hyperposterior.py
docs/: .readthedocs.yml  API.rst  Makefile  README.rst  conf.py  doc_requirements.txt  index.rst  pyproject.toml  requirements.txt  usage.rst
flask/: README.md  app.py  pandas.ipynb
flask/static/: site.css
flask/templates/: home.html  layout.html  results.html
old_notebooks/: draw_from_posterior.ipynb
tests/: test_p_astro_utils.py
