[metadata]
name = P_astro_project
description = Predicting BBH merger rates
long_description = file: README.md
long_description_content_type = text/markdown
author = Johnathon Hyland
author_email = j.hyland.2@research.gla.ac.uk
url = https://github.com/jhyland01/p_astro_project
project_urls =
    Documentation = https://p-astro-project.readthedocs.io
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python requires = >=3.6
install_requires =
    numpy
    pandas
    matplotlib
    gwpopulation
    bilby
    astropy

[options.extras_require]
test =
    pytest
    pytest-cov

docs =
    sphinx
    sphinx_rtd_theme
    numpydoc
    sphinx-autoapi